# Who-Wants-to-Be-a-Millionaire

./: .gitignore  README.md
Millionaires/: CMakeLists.txt  Configuration.cpp  Configuration.h  Lifelines.cpp  Lifelines.h  Player.cpp  Player.h  Question.cpp  Question.h  Reader.cpp  Reader.h  Writer.cpp  main.cpp
Millionaires/Functions/: Answer.h  Random.h
Millionaires/Model/: GameController.cpp  GameController.h  Question.cpp  Question.h  Reader.cpp  Reader.h
Millionaires/Model/Lifelines/: AudienceSupport.cpp  AudienceSupport.h  FiftyFifty.cpp  FiftyFifty.h  Lifeline.h  PhoneToFriend.cpp  PhoneToFriend.h
Millionaires/View/: AudienceSupportView.cpp  AudienceSupportView.h  GameFrame.cpp  GameFrame.h  GameView.cpp  GameView.h  MainMenu.cpp  MainMenu.h  PhoneToFriendView.cpp  PhoneToFriendView.h  StartView.cpp  StartView.h  View.cpp  View.h  WinnerView.cpp  WinnerView.h
Millionaires/resources/questions/: question1.csv  question11.csv  question3.csv  question4.csv  question9.csv
Millionaires/resources/sounds/: Winning1.flac  Winning2.flac  correctAnswer1.flac  incorrectAnswer.flac
Millionaires/tests/: CMakeLists.txt  test1.cpp  test2.cpp  tests.cpp
Who-Wants-to-Be-a-Millionaire/: CMakeLists.txt  Configuration.cpp  Configuration.h  main.cpp
Who-Wants-to-Be-a-Millionaire/Functions/: Answer.cpp  Random.cpp
Who-Wants-to-Be-a-Millionaire/Model/: AIQuestionGenerator.cpp  AIQuestionGenerator.h  GameController.h  Player.cpp  Player.h  Question.h  Reader.cpp  Reader.h  Writer.h
Who-Wants-to-Be-a-Millionaire/Model/AI/: AIQuestionGenerator.cpp  AIQuestionGenerator.h  openai.hpp
Who-Wants-to-Be-a-Millionaire/Model/AI/nlohmann/: json.hpp
Who-Wants-to-Be-a-Millionaire/Model/Lifelines/: FiftyFifty.cpp  PhoneToFriend.cpp
Who-Wants-to-Be-a-Millionaire/View/: AudienceSupportView.cpp  AudienceSupportView.h  GameView.cpp  GameView.h  PhoneToFriendView.cpp  PhoneToFriendView.h  StartView.cpp  StartView.h  WinnerView.cpp  WinnerView.h
Who-Wants-to-Be-a-Millionaire/resources/questions/: question1.csv  question10.csv  question11.csv  question12.csv  question2.csv  question3.csv  question4.csv  question5.csv  question6.csv  question7.csv  question8.csv  question9.csv
Who-Wants-to-Be-a-Millionaire/resources/sounds/: correctAnswer2.flac  newQuestion.flac  selectAnswer.flac
